.provarCaches/00D410000011HE0EAM/objects/rstkf__glstmtntryh__c.object
<CustomObject>
    <description>glstmtntryh__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glstmtntryh_glyear__r.rstkf__externalid__c  &amp; &apos;_&apos; &amp;  TEXT( rstkf__glstmtntryh_period__c ) &amp; &apos;_&apos; &amp;  TEXT( rstkf__glstmtntryh_entryno__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glstmtntryh_glyear__r.Name  &amp; &apos;-&apos; &amp;  TEXT( rstkf__glstmtntryh_period__c ) &amp; &apos;-&apos; &amp;  TEXT(rstkf__glstmtntryh_entryno__c)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_applyto__c</fullName>
        <description>glstmtntryh_applyto__c</description>
        <label>Apply To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Statements</fullName>
                </value>
                <value>
                    <fullName>Consolidated Statements Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_approvaldate__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_approvedby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glstmtntryh_approvedby__c</description>
        <label>Approved By</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Statement Entry Headers</relationshipLabel>
        <relationshipName>glstmtntryhs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_descr__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_entrydate__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_entryno__c</fullName>
        <label>Entry Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_glyear__c</fullName>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Statement Entry Headers</relationshipLabel>
        <relationshipName>glstmtntryhs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glstmtntryh_owner__c</description>
        <label>Responsible User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Statement Entry Headers (Responsible User)</relationshipLabel>
        <relationshipName>glstmtntryhs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete, Needs Approval</fullName>
                </value>
                <value>
                    <fullName>Approved, Not Transferred</fullName>
                </value>
                <value>
                    <fullName>Transferred to GLAYSTMT</fullName>
                </value>
                <value>
                    <fullName>Reversed, Logically Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_statusdate__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_syusr_approvedby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Approved By_Obselete</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Statement Entry Headers (Approved By)</relationshipLabel>
        <relationshipName>glstmtntryhs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_syusr_owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Responsible User_Obselete</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Statement Entry Headers</relationshipLabel>
        <relationshipName>glstmtntryhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Statement Entry Header</label>
    <listViews>
        <fullName>rstkf__RS_Statement_Entry_Headers</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glstmtntryh_descr__c</columns>
        <columns>rstkf__glstmtntryh_status__c</columns>
        <columns>rstkf__glstmtntryh_statusdate__c</columns>
        <columns>rstkf__glstmtntryh_glyear__c</columns>
        <columns>rstkf__glstmtntryh_period__c</columns>
        <columns>rstkf__glstmtntryh_entrydate__c</columns>
        <columns>rstkf__glstmtntryh_entryno__c</columns>
        <columns>rstkf__glstmtntryh_applyto__c</columns>
        <columns>rstkf__glstmtntryh_approvaldate__c</columns>
        <columns>rstkf__glstmtntryh_approvedby__c</columns>
        <columns>rstkf__glstmtntryh_owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Statement Entry Headers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Statement_Entry_Headers_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glstmtntryh_descr__c</columns>
        <columns>rstkf__glstmtntryh_status__c</columns>
        <columns>rstkf__glstmtntryh_statusdate__c</columns>
        <columns>rstkf__glstmtntryh_glyear__c</columns>
        <columns>rstkf__glstmtntryh_period__c</columns>
        <columns>rstkf__glstmtntryh_entrydate__c</columns>
        <columns>rstkf__glstmtntryh_entryno__c</columns>
        <columns>rstkf__glstmtntryh_approvaldate__c</columns>
        <columns>rstkf__glstmtntryh_syusr_approvedby__c</columns>
        <columns>rstkf__glstmtntryh_syusr_owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Statement Entry Headers - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statement Entry Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>